fix dark mode ul li

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -31,10 +31,10 @@ body.dark {
     color: var(--text-dark-header);
 }   
 
-#header a.dark-header {
-    background-color: var(--background-dark-header);
+#header a.dark-header-link {
     color: var(--text-dark-header);
-}  
+}   
+ 
 
 
 * {
